# refer

./: .gitignore  .gitmodules  IMPROVEMENTS.md  LICENSE  README.md  context.md  plan.md  research.md
backend/: .env.example  .vercelignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: __init__.py  capabilities.py  config.py  main.py  pipeline.py  review.py
backend/app/agents/: __init__.py  critics.py  evidence_llm.py  graph.py  hitl.py  routing.py  state.py
backend/app/api/: routes.py  schemas.py
backend/app/citation/: __init__.py  csl.py  extractor.py  formatter.py  matcher.py  ref_to_csl.py  references.py  style.py
backend/app/llm/: __init__.py  anthropic_client.py  health.py  openai_client.py  reference_parser.py
backend/app/parsers/: __init__.py  base.py  docx_parser.py  hwp_parser.py  hwpx_parser.py
backend/app/storage/: __init__.py  files.py
backend/app/verifier/: __init__.py  cache.py  crossref.py  kci.py  openalex.py  verify.py
backend/app/writers/: __init__.py  base.py  docx_writer.py  hwp_writer.py  hwpx_writer.py  registry.py
backend/tests/: conftest.py  test_health.py
backend/tests/fixtures/: corpus.json
backend/tests/integration/: test_apply_api.py  test_hitl_api.py  test_regression_corpus.py  test_regression_f1_score.py  test_review_api.py  test_verify.py  test_verify_sources.py
backend/tests/unit/: test_cache.py  test_citation_style.py  test_critics.py  test_docx_comments.py  test_extractor.py  test_formatter.py  test_graph_equiv.py  test_hwpx_parser.py  test_hwpx_reference_detection.py  (+9 more)
(+13 files in other folders)
